Bug 136650 - FILEOPEN DOCX Chart with data labels enabled at datapoint level show percentage values as fraction
Summary: FILEOPEN DOCX Chart with data labels enabled at datapoint level show percenta...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
7.0.0.3 release
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:7.1.0 target:7.0.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2020-09-10 15:14 UTC by NISZ LibreOffice Team
Modified: 2020-11-06 09:43 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Minimized example file from Word (24.94 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-09-10 15:14 UTC, NISZ LibreOffice Team
Details
Series level settings in Word (55.62 KB, image/png)
2020-09-10 15:15 UTC, NISZ LibreOffice Team
Details
Data point level settings and data table in Word (61.85 KB, image/png)
2020-09-10 15:15 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (99.62 KB, image/png)
2020-09-10 15:15 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-09-10 15:14:10 UTC
Created attachment 165368 [details]
Minimized example file from Word

Attached document is split out from attachment #83023 [details] of bug #67339
It contains a pie chart with data table containing percentage values.
The data labels are disabled at data series level from showing values, categories etc, but display of values is enabled for each data points, with format set to source format.
When opened in Writer these values appear as a fraction like 0.53 instead of 53% in the data table and in Word.

Steps to reproduce:
    1. Open attached file in Word and Writer

Actual results:
Data labels show fraction values.

Expected results:
Data labels should show percentage values.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 34a09c9c61bff30e8c4d16132bb47b2b1b16e422
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL

Version: 7.0.0.3 (x64)
Build ID: 8061b3e9204bef6b321a21033174034a5e2ea88e
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL

Not yet in:
Verzió: 6.4.0.3 (x86)
Build az.: b0a288ab3d2d4774cb44b62f04d5d28733ac6df8
CPU szálak: 4; OS: Windows 6.3 Build 9600; Felületmegjelenítés: alapértelmezett; VCL: win; 
Területi beállítások: en-US (hu_HU); Felület nyelve: hu-HU
Calc: CL

Additional Information: 

Bibisected using bibisect-win64-7.0 to:
URL: https://cgit.freedesktop.org/libreoffice/core/commit/?id=9f3623ce21a89e026128f85b4a09a40757754090 

author	Balazs Varga <balazs.varga991@gmail.com>	2020-03-16 15:44:06 +0100
committer	László Németh <nemeth@numbertext.org>	2020-03-20 11:44:46 +0100

tdf#131398 OOXML chart import: fix number format of pie chart labels

Adding CC to: Balázs Varga
Comment 1 NISZ LibreOffice Team 2020-09-10 15:15:11 UTC
Created attachment 165369 [details]
Series level settings in Word
Comment 2 NISZ LibreOffice Team 2020-09-10 15:15:25 UTC
Created attachment 165370 [details]
Data point level settings and data table in Word
Comment 3 NISZ LibreOffice Team 2020-09-10 15:15:48 UTC
Created attachment 165371 [details]
Screenshot of the original document side by side in Word and Writer
Comment 4 Commit Notification 2020-09-22 09:25:49 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e4d3ad9fe640e71cf3bb4c969b75ebc17ce8e335

tdf#136650 DOCX pie chart import: fix percentage

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2020-09-29 12:02:07 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: cd85546a2fbdade42f80fd3b6bd650791db9f32d
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: tr-TR (en_US.UTF-8); UI: en-US
Calc: threaded

@Balazs Varga, thanks for fixing this issue!
Comment 6 Commit Notification 2020-09-29 14:11:13 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/851b8a299f62aec885c958630a17910072c132a5

tdf#136650 DOCX pie chart import: fix percentage

It will be available in 7.0.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.