tdf#136650 DOCX pie chart import: fix percentage

Follow-up of commit e0da00d655ecca5986eea3812a8a670c6adbc40f
(tdf#132174 Chart DOCX import: fix label number format).

Change-Id: Ie0b2fe6305d7696de6dddc1f17d078fc2e749e4e